--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@formkit/auto-animate": "^0.7.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -24,8 +25,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
+    "react-loading-skeleton": "^3.3.1",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
+    "use-debounce": "^9.0.4",
     "vite": "^4.3.9"
   }
 }
