--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss": "^8.4.24",
     "react-loading-skeleton": "^3.3.1",
     "react-spinners": "^0.13.8",
+    "sass": "^1.63.6",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "use-debounce": "^9.0.4",
